# boann-ocsf-security-data-platform

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CODEOWNERS  Containerfile  LICENSE  README.md  env.example  podman-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  pytest.yml
dbt_project/: .gitignore  dbt_project.yml  profiles.yml
dbt_project/macros/: add_finding_uid_constraint.sql  add_new_indexes.sql
dbt_project/models/: schema.yaml
dbt_project/models/landing/: raw_ocsf_findings.sql
dbt_project/models/staging/: stg_ocsf_findings.sql
dbt_project/tests/: test_stg_ocsf_findings_finding_sources.sql  test_stg_ocsf_findings_severity_levels.sql  test_stg_ocsf_findings_status_names.sql
dbt_project/tests/generic/: severity_levels.sql  status.sql
docs/: SARIF_to_OCSF.md
scripts/: CONTRIBUTING.md  README.md  base_cli.py  enrichment_utils.py  ingest_raw_ocsf_findings.py  ocsf_monitor.py  run_podman.sh  sarif_to_ocsf.py
scripts/converters/: __init__.py  base_converter.py  sarif_to_ocsf.py
scripts/enrichments/: __init__.py  base.py  finding_uid_generator.py  scan_metadata.py
scripts/helpers/: __init__.py  gcs_utils.py  logging_utils.py
scripts/tests/: __init__.py  test_base_cli.py  test_enrichment_utils.py  test_finding_uid_generator.py  test_ingest_raw_ocsf_findings.py  test_ocsf_monitor.py  test_sarif_converter.py  test_sarif_uid_integration.py
scripts/tests/fixtures/: sample.sarif
scripts/tests/fixtures/test_enrichments/: _ignored_enrichment.py  another_enrichment.py  broken_enrichment.py  (+2 more)
